Switch to openJDK 11 LTS